# k8s-condition

./: README.md  docker-compose.yaml  k8s.yaml
mainapp/: Dockerfile  pyproject.toml
mainapp/mainapp/: __main__.py
mainapp/tests/: test_mainapp.py
mainapp/www/: index.html
setupwizard/: Dockerfile  nginx.conf  pyproject.toml
setupwizard/setupwizard/: __main__.py
setupwizard/tests/: test_setupwizard.py
setupwizard/www/: index.html
