[tool.poetry]
name = "setupwizard"
version = "0.1.0"
description = ""
authors = ["Shin ADACHI <shn@glucose.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.12"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
